nsis (2.46-9) UNRELEASED; urgency=low

  [ Didier Raboud ]
  * Update Vcs-* URLs to be canonical.

  [ Thomas Gaugler ]
  * Fix of GCC stdcall attribute warnings occurring for targets other
    than Windows.
  * Overwrite lintian warning about missing Large File Support (LFS). 

 -- Thomas Gaugler <thomas@dadie.net>  Wed, 18 Jun 2014 19:59:45 +0200

nsis (2.46-8) unstable; urgency=low

  * Dropped superfluous build dependency of libstdc++6-4.6-dev because
    this build dependency is fulfilled by build-essential. (Closes:
    #747982)
  * Updated to Standards-Version 3.9.5.
  * Use wildcard function of make instead of relying on shell for path
    expansion.
  * Honor hardening flags.
  * Fix of mingw-w64 warnings concerning out of bounds array access.
  * Deploy variables for path names in debian/rules.
  * Upgraded to debhelper version 9.
  * Defined override targets for arch and indep packages.
  * Introduced variables for build directory and type in debian/rules.
  * Retain same flags for build and installation to avoid rebuilding. 

 -- Thomas Gaugler <thomas@dadie.net>  Sun, 25 May 2014 11:35:48 +0200

nsis (2.46-7) unstable; urgency=low

  * Make plugins not depend on libgcc_s_sjlj-1.dll nor libdtdc++-6.dll
    by forcing static compilation of both libgcc and libstdc++. (Closes:
    #654380)

 -- Didier Raboud <odyx@debian.org>  Thu, 05 Jan 2012 19:06:42 +0100

nsis (2.46-6) unstable; urgency=low

  * Corrected command line options passed to scons for build/NEWS target.
  * Use zmemcpy function of the same calling convention. 

 -- Thomas Gaugler <thomas@dadie.net>  Fri, 07 Oct 2011 10:28:21 +0200

nsis (2.46-5) unstable; urgency=low

  * Add Replaces/Breaks against nsis to the new packages (Closes: #630620)

 -- Thomas Gaugler <thomas@dadie.net>  Sat, 18 Jun 2011 16:41:54 +0000

nsis (2.46-4) unstable; urgency=low

  [ Thomas Gaugler ]
  * Run architecture independent build process only when demanded.
  * Split NSIS package into four packages: