@@ -7,8 +7,9 @@ nsis (2.46-9) UNRELEASED; urgency=low
   * Fix of GCC stdcall attribute warnings occurring for targets other
     than Windows.
   * Overwrite lintian warning about missing Large File Support (LFS). 
+  * Replace duplicate image files of Modern UI with symbolic links. 
 
- -- Thomas Gaugler <thomas@dadie.net>  Wed, 18 Jun 2014 19:59:45 +0200
+ -- Thomas Gaugler <thomas@dadie.net>  Wed, 18 Jun 2014 20:02:05 +0200
 
 nsis (2.46-8) unstable; urgency=low
 
